Tue Aug 17 23:38:53 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* This code was done some time last week.. somehow i managed to mess up
	  most of the source code.. which i have now fixed and can continue 
	  coding =)
	
	* gE_mdi.c: (add_view) Added some temporary checking of views.. 
	  something is borked somewhere.. a lot of this will be removed
	
	* gE_view.c: (view_list_insert) new function.. we use this with a
	  g_list_foreach in (doc_insert_text). its a better method for 
	  getting the text to insert.. although its still not working properly..
	  bleh.. 
	
	* gE_view.h: Added some temop flags to the gE_view struct.. for use with
	  the new list_insert function above.

Tue Aug 10 18:58:57 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* main.h: (gE_documnet) Added views GList.
	
	* gE_mdi.c: (gE_add_view) Append the new view to the GList
	  (gE_remove_view) Remove the view from the Glist
	  
	* gE_view.h: (gE_view) Added Signal id int's.
	  
	* gE_view.c: (gE_view_init) attached the id's to the insert/delete
	  text signals.
	  (doc_insert_text_cb) Ok, here we have a for loop for the GList,
	  the insert/delete signals are disconnected and the text to be
	  inserted is inserted into each view. the signals are then 
	  reconnected, and it starts again.
	  There is a minor problem with this.. i think the GString buffer 
	  isnt needed now (as we can insert the text into each new view,
	  instaed of modifiying the GString.. hm). but i dont know.. its 
	  annoying! but multiple views kinda works now =)

Tue Aug 10 17:12:39 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* Ok, weirdness.. the buffer is working fine now.. maybe there;s
	  a glitch somewhere..
	  
	* ChangeLog: The 1998-05-03 entry had some code from gE_mdi.c in it!
	  Duely removed it =)

Tue Aug 10 16:50:21 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* gE_view.c: (view_changed_cb): Check to make sure the gE_document->changed
	  flag is set, if so return, if not set it and set all the changed 