@@ -1,3 +1,9 @@
+Tue Aug 17 23:56:17 BST 1999  Alex Roberts  <bse@gedit.pn.org>
+
+	* gE_view.c: (gE_view_init) Moved the Popup menu intiialisaer to after
+	  the split-screen initialisation.. so now we have a popup menu for both
+	  sides of the split.. (Fixes bug #1483)
+
 Tue Aug 17 23:38:53 BST 1999  Alex Roberts  <bse@gedit.pn.org>
 
 	* This code was done some time last week.. somehow i managed to mess up
